objects/agf__ADM_Release_Event__c.object
<CustomObject>
    <description>Release Events are generated from Release Event Items of an Application when applied to a specific Release</description>
    <fields>
        <fullName>agf__Application_Name__c</fullName>
        <formula>agf__Release__r.agf__Application__r.Name</formula>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Application_Type__c</fullName>
        <description>The Application Type of the Application of the Release which this Release Event is associated with.</description>
        <formula>TEXT(agf__Release__r.agf__Application__r.agf__Application_Type__c)</formula>
        <label>Application Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Customer_Facing_Name__c</fullName>
        <description>Customer-facing name for this Release Event. When field is blank, the event is not customer-facing.</description>
        <inlineHelpText>Customer-facing name for this Release Event. When field is blank, the event is not customer-facing.</inlineHelpText>
        <label>Customer Facing Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Deployment_Instances__c</fullName>
        <description>This is a space-separated list of instances which will participate in this Release Event</description>
        <inlineHelpText>Space-separated list of instances which will participate in this Release Event (eg, &quot;NA1 NA2 CS3&quot;)</inlineHelpText>
        <label>Deployment Instances</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Event_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person to contact for issues and questions about this Release Event.</description>
        <inlineHelpText>Person to contact for issues and questions about this Release Event.</inlineHelpText>
        <label>Event Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Event_Status__c</fullName>
        <description>Preview: Event record has not yet been created for this Release Event
Planned: Event record has been created</description>
        <inlineHelpText>&quot;Preview&quot; events are not committed and do not appear in the calendar. &quot;Planned&quot; events appear as scheduled in the calendar.</inlineHelpText>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Preview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Origination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release Event Template from which this Release Event originated.</description>
        <label>Origination</label>
        <referenceTo>agf__ADM_Release_Event_Template__c</referenceTo>
        <relationshipLabel>Release Events</relationshipLabel>
        <relationshipName>Release_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Release_Name__c</fullName>
        <formula>agf__Release__r.Name</formula>
        <label>Release Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Release_Type__c</fullName>
        <description>The Release Type of the Release this Release Event is associated with.</description>
        <formula>TEXT(agf__Release__r.agf__Release_Type__c)</formula>
        <label>Release Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Release__c</fullName>
        <description>Release to which this Release Event is associated.</description>
        <inlineHelpText>Release to which this Release Event is associated.</inlineHelpText>
        <label>Release</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipLabel>Release Events</relationshipLabel>
        <relationshipName>Release_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_End__c</fullName>
        <description>Scheduled End for the Release Event</description>
        <inlineHelpText>Scheduled end time of the Release Event.</inlineHelpText>
        <label>Scheduled End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Start__c</fullName>
        <description>Start time of the Release Event</description>
        <inlineHelpText>Scheduled start time of the Release Event</inlineHelpText>
        <label>Scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <label>Release Event</label>
    <nameField>
        <label>Release Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>agf__End_Time_cannot_be_before_Start_Time</fullName>
        <active>true</active>
        <errorConditionFormula>agf__Scheduled_Start__c &gt; agf__Scheduled_End__c</errorConditionFormula>
        <errorDisplayField>agf__Scheduled_End__c</errorDisplayField>
        <errorMessage>Event End Time cannot be before Start Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__End_Time_must_be_set</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(agf__Scheduled_End__c)</errorConditionFormula>
        <errorDisplayField>agf__Scheduled_End__c</errorDisplayField>
        <errorMessage>Event End Time must be set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Start_Time_must_be_set</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(agf__Scheduled_Start__c)</errorConditionFormula>
        <errorDisplayField>agf__Scheduled_Start__c</errorDisplayField>
        <errorMessage>Event Start Time must be set.</errorMessage>
    </validationRules>
</CustomObject>